ChangeLog for herdstat

2005-09-04 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.1.1_p7).
	* src/devaway.cc: return immediately from fetch() if a local path was
	specified on the command line.
	* src/xmlparser.cc, src/xmlparser.hh: xmlwrapp's init object should
	only be called once, not once per XML (oops).

2005-08-30 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.1.1_p6).
	* lib/vars.cc: Add check to subst() member so that variable
	substitution does not occur when encountering stuff like
	"var=...${var}", preventing possible inf loops, bug #104190.
	* lib/file.cc, lib/file.hh: inline is_file() and is_dir().
	* too many files to list: s/util::string/std::string/,
	s/util::path_T/std::string/.

2005-08-29 Aaron Walker <ka0ttic@gentoo.org>

	* src/Makefile.am, tests/src/Makefile.am, lib/Makefile.am: Add
	-Wold-style-cast to AM_CXXFLAGS.

2005-08-10 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Forgot to remove glibmm/libxml++ stuff.  Do 1.1.1_p5.

	* configure.ac: Update version (1.1.1_p4).

2005-08-09 Aaron Walker <ka0ttic@gentoo.org>

	* src/herds_xml_handler.cc: Append to developer name instead of
	overwriting it as the SAX2 implementation does not guarantee that the
	characters callback will be invoked only once.  This fixes the
	long-time herdstat bug that caused developer names with non-ASCII
	characters to be truncated (since the second invocation of the
	callback would overwrite what was stored on the first invocation).

2005-07-19 Aaron Walker <ka0ttic@gentoo.org>

	* lib/string.hh: Add cstdarg include (failure on uclibc).  Thanks to
	SpanKY for pointing it out.

2005-07-16 Aaron Walker <ka0ttic@gentoo.org>

	* lib/string.cc, lib/string.hh: Define stringify<> inline instead of
	in the source file, otherwise we get an undefined reference if we try
	calling it.

2005-07-13 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.1_p3 release).